Changelog for Miosix np embedded OS

v1.58
- Made __register_exitproc() and __call_exitprocs() two new syscalls, to allow
  a future implementation of atexit support.
- Added support for pthread_once, also added new patch to newlib to reduce the
  size of pthread_once_t from 8 bytes to 2 bytes
- Added __cxa_guard_acquire(), __cxa_guard_release() and __cxa_guard_abort()
  to syscalls.cpp. These override the default ones in libstdc++ and provide
  a miosix-aware implementation that can guarantee thread safe initialization
  of static objects. Also, they don't pull in exception support unlike those
  in libstdc++
- Fixed a bug in the control based scheduler that caused sporadic crashes
- Reduced STACK_DEFAULT_FOR_PTHREAD to 2048 bytes, and STACK_MIN to 256 bytes.
- Added tests in testsuite for FastMutex, helped catch one bug
- Refactored code in Mutex and CondotionVariable
- Implement ConditionVariable support for FastMutex
- Breaking change: the Lock and Unlock classes have been templatized to
  work both with Mutex and FastMutex. Existing code Needs to be upgraded
  specifying the template parameter. For example, Lock l(m); becomes
  Lock<Mutex> l(m); or Lock<FastMutex> l(m);
- Added -D_REENT_SMALL flag to CFLAGS_BASE and CXXFLAGS_BASE, otherwise
  #including <reent.h> picks up the wrong version of struct _reent
- Thanks to the patched version of newlib, rewritten pthread mutex and
  condition variable code in a faster way.
- Added new compiler build scripts for gcc-4.5.2, with significantly more
  patching in the newlib area. This is required to implement pthread mutexes
  and condition variables efficiently, as well as to reduce memory footprint.
  As a drawback, the use of the new patched compiler has become mandatory to
  build Miosix.
- Bumped to version 1.58 because from now on the new compiler gcc-4.5.2, and
  especially the new newlib patches become necessary

v1.57
- Added memory barriers to miosix_private::doDisableInterrupts() and