@@ -137,36 +137,33 @@ namespace __cxxabiv1
  */
 extern "C" int __cxa_guard_acquire(__guard *g)
 {
+    miosix::InterruptDisableLock dLock;
     volatile MiosixGuard *guard=reinterpret_cast<volatile MiosixGuard*>(g);
     for(;;)
     {
-        miosix::disableInterrupts();
-        //Object already initialized, good
-        if(guard->initialized)
-        {
-            miosix::enableInterrupts();
-            return 0;
-        }
-        //Object uninitialized, and no other thread trying to initialize it
+        if(guard->initialized) return 0; //Object already initialized, good
+        
         if(guard->owner==0)
         {
+            //Object uninitialized, and no other thread trying to initialize it
             guard->owner=miosix::Thread::IRQgetCurrentThread();
-            miosix::enableInterrupts();
             return 1;
         }
+
         //If we get here, the object is being initialized by another thread
         if(guard->owner==miosix::Thread::IRQgetCurrentThread())
         {
-            //Wait, WTF the other thread initializing the object is
-            //this thread?!? We have a recursive initialization error
-            //Not throwing an exception to avoid pulling in exception
-            //support even when -fno-exception selected
+            //Wait, the other thread initializing the object is this thread?!?
+            //We have a recursive initialization error. Not throwing an
+            //exception to avoid pulling in exceptions even with -fno-exception
             miosix::Console::IRQwrite("Recursive initialization\r\n");
-            miosix::enableInterrupts();
             _exit(1);
         }
-        miosix::enableInterrupts();
-        miosix::Thread::yield(); //Sort of a spinlock, a "yieldlock"...
+
+        {
+            miosix::InterruptEnableLock eLock(dLock);
+            miosix::Thread::yield(); //Sort of a spinlock, a "yieldlock"...
+        }
     }
 }
 
@@ -176,11 +173,10 @@ extern "C" int __cxa_guard_acquire(__guard *g)
  */
 extern "C" void __cxa_guard_release(__guard *g)
 {
-    volatile MiosixGuard *guard=reinterpret_cast<volatile MiosixGuard*>(g);
-    miosix::disableInterrupts();
+    miosix::InterruptDisableLock dLock;
+    MiosixGuard *guard=reinterpret_cast<MiosixGuard*>(g);
     guard->initialized=1;
     guard->owner=0;
-    miosix::enableInterrupts();
 }
 
 /**
@@ -189,11 +185,10 @@ extern "C" void __cxa_guard_release(__guard *g)
  */
 extern "C" void __cxa_guard_abort(__guard *g)
 {
-    volatile MiosixGuard *guard=reinterpret_cast<volatile MiosixGuard*>(g);
-    miosix::disableInterrupts();
-    //Leaving initialized @ 0
+    miosix::InterruptDisableLock dLock;
+    MiosixGuard *guard=reinterpret_cast<MiosixGuard*>(g);
+    //Leaving guard->initialized @ 0
     guard->owner=0;
-    miosix::enableInterrupts();
 }
 
 } //namespace __cxxabiv1
